css/stylehome.css
.section {
    padding-top: 80px;
    padding-bottom: 80px;
}
.h-center {
    text-align: center;
    margin-bottom: 40px;
}
p {
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight:300;
}
.txt {
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 300;
}

h1, h2 {
    font-family: 'Oswald', sans-serif;
    font-weight: 300; 
}

h2 {
    font-size: 48px;
}

h3 {
    font-size: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    text-align: center;
}

h4 {
    font-size: 30px;
    padding-top: 20px;
    padding-bottom: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    text-align: center;
}

.btn {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 500;
    border-radius: 0%;
    border: none;
    padding-left: 41px;
    padding-right: 41px;
    filter: drop-shadow(0px 1px 3px rgba(0, 0, 0, 0.1)), drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.06));
    transition: 0.3s;
}
.btn-light {
    background-color: white;
    color: black;
}
.blue-btn {
    background-color: #5d74b9;
    color: white;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
    color: white;
    background-color: black;
}
header {
    width: 100%;
    position: fixed;
    top:0;
    background-color: white;
    z-index: 20;
  }


/* Nav Styling */
.navContainer {
    padding-top: 8px;
    padding-bottom: 8px;
}

.nav-item {
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
}
.nav-link {
    color: black;
}

.nav-link:hover{
    color: #5d74b9;
    transition: 0.3s;
}
 .mid-nav {
     text-align: center;
 }

 .nav-btn {
     margin-left: 16px;
 }
.mainNav {
    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.06));
}


/* Hero Styling */

.hero-space{
    background-image: url("../images/bluebonnet-sunrise-1-2\ 1.png");
    background-size: cover;
    background-repeat: no-repeat;
    height: 100%;
    height: calc(100vh - 25px);
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .jumboCopy {
    width: 70%;
    min-width: 500px;
    max-width: 700px;
    color: black;
    text-align: center;
  }
.heroContainer {
    text-align: center;
    padding-top: 80px;
    padding-bottom: 80px;
}

.heroText {
    padding-top: 50px;
    padding-bottom: 200px;
}

.display-4 {
    margin-bottom: 40px;
    font-size: 70px;
}

.lead {
    margin-bottom: 40px;
    font-size: 24px;
}

#hero-btn {
    width:fit-content;
}

/* BLM Banner */

.BLM {
    background-color: #333333;
    color: white;
    text-align: center;
    margin: 0;
    z-index: 100;
    padding-top: 6.2em;
}

.banner-txt {
    font-size: 24px;
}

.banner-link {
    font-weight: 400;
    text-decoration: underline;
    color: white;
}
.banner-link:hover {
    color: #B9A25D;
    transition: 0.3s;
}
.crisis-link:hover {
    color:#B9A25D;
    transition: 0.3s;
}


/* How It Works Styling */
.how-it-works {
    background-color:#DFE3F1;
}

.flex-item {
   margin: 16px;
}

.arrow {
    position: relative;
    bottom: 3em;
}


/* first clinic with professional volunteers*/
.content {
    text-align: center;
}

/* Success Stories Styling*/
.carousel-inner {
    display: flex;
    flex-direction: row;
}
.success-stories {
    background-color: #DFE3F1;
}

blockquote {
    font-family: 'Roboto', sans-serif;
    font-size: 19px;
    line-height: 1.45;
    color: #383838;
    text-align: center;
    margin-top: 80px;
    z-index: 10px;
    margin-left: 20px;
    
}

.quote-txt {
    width: 720px;
    height: 128px;
    padding-left: 60px;
    padding-right: 60px;
    padding-bottom: 80px;
}

blockquote:before {
    font-family: 'Playfair Display', serif;
    display: block;
    padding-left: 10px;
    content: "\201C";
    font-size: 144px;
    position: absolute;
    top: -90px;
    color: #5d74b9;
    z-index: 10px;
    margin-top: 70px;
}

blockquote:after {
    font-family: 'Playfair Display', serif;
    position: absolute;
   /* display: block; don't use this, it raised the quote too high from the bottom - defeated line-height? */
    float:right;
    font-size:144px;
    line-height: 1;
    bottom: 110px;
    right: 50px;
    content: "\201D";
    color: #5d74b9;
}

.successIMG {
    max-width: 308px;
    max-height: 308px;

}

.person {
    display: flex;
    flex-direction: column;
    text-align: center;
    position: relative;
    margin-bottom: 80px;
}
.carousel-inner {
    padding-bottom: 80px;
}

/* Success Stories Styling*/

ol.carousel-indicators li,
ol.carousel-indicators li.active {
    border-radius: 50%;
    height: 10px;
    width: 10px;
    background-color: #333333;
}

.sectionContainer {
    text-align: center;
}

.quotation {
    font-family: 'Playfair Display', serif;
    font-weight: 700;
    font-size: 144px;
}

#success-title {
    margin-bottom: 80px;
}


/* Become a volunteer styling */

/* Help our cause styling */
.donate {
    background-color: #D5C79E;
    padding-top: 100px;
    padding-bottom: 100px;
}

/* Stay Connected Styling*/
.subscribe {
    text-align: center;
    max-width: 600px;
    margin: 35px auto;
    padding: 45px;
    background-color: #D5C79E;
}
.subscribeSection {
    background-image: url(../images/hands\ in.png);
    background-size: cover;
    align-items: center;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 557px;
}

.form-group {
    display: flex;
    justify-content: center;
}

input {
    margin-right: 16px;
}

.form-control {
    height: 42px;
    width: 320px;
}

#sign-btn {
    align-self: center;
}
/*.emailContain {
    background: url("../images/emailBG.jpg");
    background-size: cover;
    display: flex;
    align-items: center;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 500px;
  }*/

/* footer styling*/

.mid-menu {
    display: flex;
    flex-direction: column;
    text-align: center;
}

.right-menu{
    text-align: right;
}

.last-item {
    margin-top: 40px;
}

.footer-list {
    margin-bottom: 10px;
}
.footerContainer {
    padding-top: 41px;
    padding-bottom: 41px;
}

.crisis-banner {
    text-align: center;
    background-color: white;
    color: #5d74b9;
    margin: 0 auto;
}

.last-item, .footer-list {
    font-family: 'Roboto', sans-serif;
    font-size: 20px;
    font-weight: 300;
}

.footer-link {
    color: white;
}

#myFooter {
    background-color: #5d74b9;
}

.left-menu, .right-menu {
    align-self: center;
    padding-top: 40px;
}

.footer-txt, .last-item{
    color: white;
}

.crisis-link {
    font-weight: 400;
    text-decoration: underline;
    color: #5d74b9;
}

.social-media {
    padding-bottom: 20px;
}

.footer-link:hover {
    color:#DFE3F1;
    text-decoration: none;
}

/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 51px;
    height: 32px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {
    opacity: 0;
    width: 0;
    height: 0;
  }
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color:rgba(0, 0, 0, 0.36);
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 28px;
    width: 28px;
    left: 2px;
    bottom: 2px;
    border: solid;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #B9A25D;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #3D4A76;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(22px);
    -ms-transform: translateX(22px);
    transform: translateX(20px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
#spanish {
    margin-right: 10px;
}

